внесла правки по пятой ДЗ

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!--Бизнес-->
 
     <section class="section">
-      <div class="container section-benefits">
+      <div class="container">
         <h2 class="section-title visually-hidden">Бизнес</h2>
         <ul class="benefits">
           <li class="benefit-item">
