--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,14 @@
           </li>
           <li class="example">
             <a href="#" class="link">
-              <img src="./images/img9.jpg" alt="" height="294" width="370" class="portfolio-img" />
+
+              <div class="block-of-text">
+                <img src="./images/img9.jpg" alt="" height="294" width="370" class="portfolio-img" />
+                <p class="text-on-photo">
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищенные сервера конкурентов.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="title-portfolio">
                   Постер New Orlean vs Golden Star
@@ -107,7 +114,14 @@
           </li>
           <li class="example">
             <a href="#" class="link">
-              <img src="./images/img10.jpg" alt="" height="294" width="370" class="portfolio-img" />
+
+              <div class="block-of-text">
+                <img src="./images/img10.jpg" alt="" height="294" width="370" class="portfolio-img" />
+                <p class="text-on-photo">
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищенные сервера конкурентов.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="title-portfolio">Ресторан Seafood</h2>
                 <p class="text-portfolio">Приложение</p>
@@ -116,7 +130,13 @@
           </li>
           <li class="example">
             <a href="#" class="link">
-              <img src="./images/img11.jpg" alt="" height="294" width="370" class="portfolio-img" />
+              <div class="block-of-text">
+                <img src="./images/img11.jpg" alt="" height="294" width="370" class="portfolio-img" />
+                <p class="text-on-photo">
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищенные сервера конкурентов.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="title-portfolio">Проект Prime</h2>
                 <p class="text-portfolio">Маркетинг</p>
@@ -125,7 +145,13 @@
           </li>
           <li class="example">
             <a href="#" class="link">
-              <img src="./images/img12.jpg" alt="" height="294" width="370" class="portfolio-img" />
+              <div class="block-of-text">
+                <img src="./images/img12.jpg" alt="" height="294" width="370" class="portfolio-img" />
+                <p class="text-on-photo">
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищенные сервера конкурентов.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="title-portfolio">Проект Boxes</h2>
                 <p class="text-portfolio">Приложение</p>
@@ -134,7 +160,13 @@
           </li>
           <li class="example">
             <a href="#" class="link">
-              <img src="./images/img13.jpg" alt="" height="294" width="370" class="portfolio-img" />
+              <div class="block-of-text">
+                <img src="./images/img13.jpg" alt="" height="294" width="370" class="portfolio-img" />
+                <p class="text-on-photo">
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищенные сервера конкурентов.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="title-portfolio">Inspiration has no Borders</h2>
                 <p class="text-portfolio">Веб-сайт</p>
@@ -143,7 +175,13 @@
           </li>
           <li class="example">
             <a href="#" class="link">
-              <img src="./images/img14.jpg" alt="" height="294" width="370" class="portfolio-img" />
+              <div class="block-of-text">
+                <img src="./images/img14.jpg" alt="" height="294" width="370" class="portfolio-img" />
+                <p class="text-on-photo">
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищенные сервера конкурентов.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="title-portfolio">Издание Limited Edition</h2>
                 <p class="text-portfolio">Дизайн</p>
@@ -152,7 +190,13 @@
           </li>
           <li class="example">
             <a href="#" class="link">
-              <img src="./images/img15.jpg" alt="" height="294" width="370" class="portfolio-img" />
+              <div class="block-of-text">
+                <img src="./images/img15.jpg" alt="" height="294" width="370" class="portfolio-img" />
+                <p class="text-on-photo">
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищенные сервера конкурентов.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="title-portfolio">Проект LAB</h2>
                 <p class="text-portfolio">Маркетинг</p>
@@ -161,7 +205,13 @@
           </li>
           <li class="example">
             <a href="#" class="link">
-              <img src="./images/img16.jpg" alt="" height="294" width="370" class="portfolio-img" />
+              <div class="block-of-text">
+                <img src="./images/img16.jpg" alt="" height="294" width="370" class="portfolio-img" />
+                <p class="text-on-photo">
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищенные сервера конкурентов.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="title-portfolio">Growing Business</h2>
                 <p class="text-portfolio">Приложение</p>
