--- a/portfolio.html
+++ b/portfolio.html
@@ -280,7 +280,7 @@
             <a href="#" class="button primary">
               <span> Подписаться </span>
               <svg class="svg-footer" width="24" height="24">
-                <use xlink:href="./images/sprite2.svg#icon-icon-send"></use>
+                <use xlink:href="./images/sprite.svg#icon-icon-send"></use>
               </svg>
             </a>
           </form>
