--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
           <div class="form-field">
             <input type="text" name="user-name" id="name" class="form-input" placeholder=" ">
             <label for="name" class="label-title"> Имя </label>
-            <svg class="modal-svg" width="12" height="12">
+            <svg class="modal-svg" width="18" height="18">
 
               <use xlink:href="./images/symb.svg#icon-user-name"> </use>
 
@@ -485,7 +485,7 @@
           <div class="form-field">
             <input type="tel" name="user-mobile" id="tel" class="form-input" placeholder=" ">
             <label for="tel" class="label-title"> Телефон </label>
-            <svg class="modal-svg" width="13" height="13">
+            <svg class="modal-svg" width="18" height="18">
 
               <use href="./images/symb.svg#icon-user-mobile"> </use>
 
@@ -494,15 +494,15 @@
           <div class="form-field">
             <input type="email" name="user-email" id="email" class="form-input" placeholder=" ">
             <label for="email" class="label-title"> Почта </label>
-            <svg class="modal-svg" width="15" height="12">
+            <svg class="modal-svg" width="18" height="18">
 
               <use href="./images/symb.svg#icon-user-email"> </use>
 
             </svg>
           </div>
           <div class="form-field">
-            <textarea class="comment" name="comment" id="comment" rows="10" placeholder=" "></textarea>
-            <label for="comment" class="label-title">Комментарий</label>
+            <textarea class="comment-area" name="comment" id="comment" rows="10" placeholder=" "></textarea>
+            <label for="comment" class="label-title comment">Комментарий</label>
           </div>
           <div class="checkbox-container">
             <label class="checkbox-form">
