--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
 
   <div class="backdrop is-hidden" data-modal>
-    <!-- <div class="backdrop-row"> -->
+
     <div class="modal">
       <button class="close-modal-button " data-modal-close>
         <svg class="close-icon" width="11" height="11">
@@ -500,13 +500,13 @@
 
             </svg>
           </div>
-          <div class="form-field">
+          <div class="form-field area">
             <textarea class="comment-area" name="comment" id="comment" rows="10" placeholder=" "></textarea>
             <label for="comment" class="label-title comment">Комментарий</label>
           </div>
           <div class="checkbox-container">
             <label class="checkbox-form">
-              <input class="checkbox" type="checkbox" name="policy" value="policy">
+              <input class="checkbox" type="checkbox" name="policy" id="policy">
               <span class="checkbox-icon"> </span>
               <span> Соглашаюсь с рассылкой и принимаю <a href=""> Условия договора </a> </span>
             </label>
@@ -515,7 +515,7 @@
         <button class="button modal-button" data-modal-close> Отправить </button>
       </form>
     </div>
-    <!-- </div> -->
+
   </div>
 
 
