--- a/index.html
+++ b/index.html
@@ -441,13 +441,13 @@
           <b class="call-to-action">подпишитесь на рассылку</b>
 
           <form action="" class="form-subscribe">
-            <input type="e-mail" name="subscribe-email-footer" class="subscribe-input" placeholder="E-mail">
-            <a href="#" class="button primary">
+            <input type="email" name="subscribe-email-footer" class="subscribe-input" placeholder="E-mail">
+            <button class="button primary">
               <span> Подписаться </span>
               <svg class="svg-footer" width="24" height="24">
                 <use xlink:href="./images/sprite.svg#icon-icon-send"></use>
               </svg>
-            </a>
+            </button>
           </form>
         </div>
       </div>
